Fixed up spacing and added some compatibility definitions

--- a/index.css
+++ b/index.css
@@ -4,19 +4,25 @@ body {
     color: #7B7B7B;
     background-color: #F1F2EC;
     background-repeat: no-repeat;
+
     background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
     height: 100%;
     width: 100%;
     margin: auto;
 }
+
 ::selection {
     background: #94C7B6;
     color: #FFFFFF;
 }
+
 ::-moz-selection {
     background: #94C7B6;
     color: #FFFFFF;
 }
+
 .header {
     color: #F1F2EC;
     background-color: #3E6478;
@@ -24,8 +30,11 @@ body {
     margin: 0 0;
     padding: 0 0;
     border-bottom: 10px solid #94C7B6;
+
     box-shadow: 0 3px 3px #888888;
+    -webkit-box-shadow: 0 3px 3px #888888;
 }
+
 .content {
     overflow: hidden;
     display: block;
@@ -34,65 +43,80 @@ body {
     margin: 0 0 0 200px;
     padding: 25px 25px 25px 25px;
 }
+
 .red {
     color: #783E3E;
     font-size: 2em;
     font-weight: bold;
 }
+
 div {
     padding: 25px 0 0 0;
 }
+
 p {
     font-size: 1.3em;
     margin: 0;
     padding: 0;
 }
+
 abbr {
     font-variant: small-caps;
 }
+
 ::-moz-selection {
     background: #006E50;
 }
+
 h1 {
     font-size: 6.5em;
     margin: 0;
     padding: 0;
 }
+
 h2 {
     font-size: 3.5em;
     margin: 0;
     padding: 0;
 }
+
 h3 {
     font-size: 2.5em;
     margin: 0;
     padding: 0;
 }
+
 h4 {
     font-size: 1.5em;
     margin: 0;
     padding: 0;
 }
+
 ul {
     list-style-type: none;
     text-align: justify;
     display: inline;
-    white-space:nowrap;
+    white-space: nowrap;
     padding: 0;
 }
+
 li {
     padding: 0;
 }
+
 a {
     font-size: 1.3em;
     color: #783E3E;
 }
+
 #info {
     padding: 16px 0;
 }
+
 #links {
     padding: 16px 0;
 }
+
 .social {
     float: left;
     overflow: hidden;
@@ -104,56 +128,71 @@ a {
     width: 30px;
     height: 30px;
 }
+
 .description {
     position: relative;
     line-height: 30px;
     height: 30px;
     padding: 0 6px;
 }
+
 .icon {
     background: url("images/sprites.png") no-repeat;
     float: left;
     height: 30px;
     width: 30px;
 }
+
 #github {
     background-color: #000000;
 }
+
 .icon#github {
     background-position: 0 0;
 }
+
 #stackoverflow {
     background-color: #ffffff;
     color: #848484;
     font-size: 0.7em;
 }
+
 .icon#stackoverflow {
     background-position: -30px 0;
 }
+
 #linkedin {
     background-color: #0072B1;
 }
+
 .icon#linkedin {
     background-position: -60px 0;
 }
+
 #facebook {
     background-color: #3B5998;
 }
+
 .icon#facebook {
     background-position: -90px 0;
 }
+
 #twitter {
     background-color: #00ACED;
 }
+
 .icon#twitter {
     background-position: -120px 0;
 }
+
 #lastfm {
     background-color: #C02A2A;
 }
+
 .icon#lastfm {
     background-position: -150px 0;
 }
+
 #email {
     color: #783E3E;
     font-size: 1.6em;
